# ChangeLog for www-client/opera
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/opera/ChangeLog,v 1.114 2007/07/26 13:17:03 jer Exp $

*opera-9.22-r1 (26 Jul 2007)

  26 Jul 2007; Jeroen Roovers <jer@gentoo.org> +opera-9.22-r1.ebuild:
  Do not install the libflashplayer symlink any longer (bug #127200
  comment #19).

  22 Jul 2007; Donnie Berkholz <dberkholz@gentoo.org>; opera-9.21.ebuild,
  opera-9.21-r1.ebuild, opera-9.22_rc651.ebuild, opera-9.22_rc652.ebuild,
  opera-9.22.ebuild:
  Drop virtual/x11 references.

  21 Jul 2007; Raúl Porcel <armin76@gentoo.org> opera-9.22.ebuild:
  x86 stable wrt security #185497

  20 Jul 2007; Tobias Scherbaum <dertobi123@gentoo.org> opera-9.22.ebuild:
  ppc stable, bug #185497

  20 Jul 2007; Gustavo Zacarias <gustavoz@gentoo.org> opera-9.22.ebuild:
  Stable on sparc wrt security #185497

  19 Jul 2007; Jeroen Roovers <jer@gentoo.org> opera-9.22.ebuild:
  Fix patch path.

  19 Jul 2007; Jeroen Roovers <jer@gentoo.org> -opera-9.22.651.ebuild,
  -opera-9.22.652.ebuild:
  Really remove old weekly ebuilds too.

*opera-9.22 (19 Jul 2007)
*opera-9.22_rc652 (19 Jul 2007)
*opera-9.22_rc651 (19 Jul 2007)

  19 Jul 2007; Jeroen Roovers <jer@gentoo.org> +opera-9.22_rc651.ebuild,
  +opera-9.22_rc652.ebuild, +opera-9.22.ebuild:
  Version bump. Move weekly ebuilds to _rc version format.

*opera-9.22.652 (10 Jul 2007)

  10 Jul 2007; Jeroen Roovers <jer@gentoo.org> opera-9.22.651.ebuild,
  +opera-9.22.652.ebuild:
  New weekly, intel-* only this time, so no ppc or sparc. Removed sample URIs
  from weekly ebuilds.

  09 Jul 2007; Mike Frysinger <vapier@gentoo.org> opera-9.21.ebuild,
  opera-9.21-r1.ebuild, opera-9.22.651.ebuild:
  Drop setarch depend -- this is handled by the system packages.

*opera-9.22.651 (08 Jul 2007)

  08 Jul 2007; Jeroen Roovers <jer@gentoo.org> +opera-9.22.651.ebuild:
  http://my.opera.com/desktopteam/blog/yet-another-merlin-build
