@@ -40,10 +40,6 @@ EBUILD opera-9.21.ebuild 5572 RMD160 cbe0dcc7784edd462a990ab190f83d697a485442 SH
 MD5 a8a091dc58dfc10a6f493a1dfea536ce opera-9.21.ebuild 5572
 RMD160 cbe0dcc7784edd462a990ab190f83d697a485442 opera-9.21.ebuild 5572
 SHA256 31433d48941fbcf7c175fbc94fcc2c85863efb9633203b3989beebf21e208c2c opera-9.21.ebuild 5572
-EBUILD opera-9.22-r1.ebuild 5500 RMD160 2e1f53f2ea12cb3464fd7a28e1d96f605202909d SHA1 79decc62fab74ccb03da73178cc884f1047ba406 SHA256 51030a8cf627d300ff20980696266e8dcaa65d416d2eeb1cb57c5d94a1e52d64
-MD5 6bdbc405c5c884fdeca93ec5fb133408 opera-9.22-r1.ebuild 5500
-RMD160 2e1f53f2ea12cb3464fd7a28e1d96f605202909d opera-9.22-r1.ebuild 5500
-SHA256 51030a8cf627d300ff20980696266e8dcaa65d416d2eeb1cb57c5d94a1e52d64 opera-9.22-r1.ebuild 5500
 EBUILD opera-9.22.ebuild 5633 RMD160 73fe2e369e92ff3c2fd7ba47218f699ccea1b4cb SHA1 249c173539e8074b7fb245df848c94dca1b94b2a SHA256 48114169fd84b759822f78a21e03b62d1f897263659dfc6b44c20b0093e1fe7b
 MD5 29598cca5f0faf8483517c5f8a900beb opera-9.22.ebuild 5633
 RMD160 73fe2e369e92ff3c2fd7ba47218f699ccea1b4cb opera-9.22.ebuild 5633
@@ -56,10 +52,10 @@ EBUILD opera-9.22_rc652.ebuild 5332 RMD160 e5e30367f2d90c4ac1c8b2c4df1863379fe1e
 MD5 6dfd390ec3864297a08d52a16660fdd5 opera-9.22_rc652.ebuild 5332
 RMD160 e5e30367f2d90c4ac1c8b2c4df1863379fe1e175 opera-9.22_rc652.ebuild 5332
 SHA256 39d3f30cadb7b8e96f0568f0dafb68a643a262344aaa34d0c84482e40d09f691 opera-9.22_rc652.ebuild 5332
-MISC ChangeLog 29904 RMD160 210c967ca11f62ee70419feae8847c526a4a0438 SHA1 1a3a2eb2297ffeb705f4008f0595737e2598f691 SHA256 90efb4a8b223c41be9fee848ac246026582c62fdd4c7f3ec0aeea2a8f9c52a4e
-MD5 22f379825ae1fe3ef0403efe2226e0b9 ChangeLog 29904
-RMD160 210c967ca11f62ee70419feae8847c526a4a0438 ChangeLog 29904
-SHA256 90efb4a8b223c41be9fee848ac246026582c62fdd4c7f3ec0aeea2a8f9c52a4e ChangeLog 29904
+MISC ChangeLog 30015 RMD160 790cc4932024292b6e50d1df1abcfaf2edea719c SHA1 abb78c5d9f090f83c39eb58944c62aaedf66581e SHA256 bcabab433d4dbe95ff23e17ccbf7389e39da551911e4c14cbc2c77d387487a06
+MD5 53750007ca4f3fee5905b9be581b91cf ChangeLog 30015
+RMD160 790cc4932024292b6e50d1df1abcfaf2edea719c ChangeLog 30015
+SHA256 bcabab433d4dbe95ff23e17ccbf7389e39da551911e4c14cbc2c77d387487a06 ChangeLog 30015
 MISC metadata.xml 314 RMD160 a8ac5ef4c09e8e84b23eda16e27c5c9ff94be3ca SHA1 e8c243cb101fa6394ab03e798b26a9236416c778 SHA256 d2bd8cedc8024568ce3ed94a8fc2f973c7e713990aac862e03cdded86d57beb8
 MD5 dbaecd1106290cdb2646380dd226c9e8 metadata.xml 314
 RMD160 a8ac5ef4c09e8e84b23eda16e27c5c9ff94be3ca metadata.xml 314
@@ -73,9 +69,6 @@ SHA256 73e201315fa5357161151022ec2f98af26862f3b03be08e4aa18bf413033b9f6 files/di
 MD5 701169d686f467bff1f9a145e54f32d4 files/digest-opera-9.22 1998
 RMD160 660722c1caea45119eadc2253ccd06ce837c9e62 files/digest-opera-9.22 1998
 SHA256 410c8d9a9c6fde810ee2f8200738904cc2bca1876c2d1cba2cbb928a6788b7f2 files/digest-opera-9.22 1998
-MD5 701169d686f467bff1f9a145e54f32d4 files/digest-opera-9.22-r1 1998
-RMD160 660722c1caea45119eadc2253ccd06ce837c9e62 files/digest-opera-9.22-r1 1998
-SHA256 410c8d9a9c6fde810ee2f8200738904cc2bca1876c2d1cba2cbb928a6788b7f2 files/digest-opera-9.22-r1 1998
 MD5 d3925d43fac5575f93757be06e4e7207 files/digest-opera-9.22_rc651 2070
 RMD160 4c24d0a56413bbfab6e08ce55ac34f3408ac18a9 files/digest-opera-9.22_rc651 2070
 SHA256 946df4f046d9f1471ece28cd593dc8f719703dace9f15b95c76d61118379cbb4 files/digest-opera-9.22_rc651 2070
