@@ -1,18 +1,0 @@
-MD5 601c923cfdc99ec57925e7cdc669ce48 opera-9.22-20070716.1-static-qt.i386-en.tar.bz2 6800643
-RMD160 b00159a4e9a22253eadc44bca99e321687d1c75c opera-9.22-20070716.1-static-qt.i386-en.tar.bz2 6800643
-SHA256 fed87ac83c2d0dd123856435319615b535142d28f227244a430661f5faac7964 opera-9.22-20070716.1-static-qt.i386-en.tar.bz2 6800643
-MD5 147f8043df26d8ac997edbe7ced0f3ac opera-9.22-20070716.1-static-qt.i386.freebsd-en.tar.bz2 6546833
-RMD160 925a9d010b1630426a2e4de429ec1583ea3cb099 opera-9.22-20070716.1-static-qt.i386.freebsd-en.tar.bz2 6546833
-SHA256 5c9573de5217e8d8107922341d8b4367d158c45edf1d522768860faf8b43f58c opera-9.22-20070716.1-static-qt.i386.freebsd-en.tar.bz2 6546833
-MD5 1ca7710dbbadf234981742b9a48ee72d opera-9.22-20070716.1-static-qt.ppc-en.tar.bz2 6839351
-RMD160 3fb83e1e944d9ac9d0c2d745813f216a3bd48fcb opera-9.22-20070716.1-static-qt.ppc-en.tar.bz2 6839351
-SHA256 d9d1134742f9a553e9bb68885a1d32eb3bac90af8adf1feea6efa9ec5742d8d0 opera-9.22-20070716.1-static-qt.ppc-en.tar.bz2 6839351
-MD5 4eccc2443ef63a4354512ea3a2dd6776 opera-9.22-20070716.1-static-qt.sparc-en.tar.bz2 6739692
-RMD160 709d3f17aa3868cebd70b211ffde811988964d13 opera-9.22-20070716.1-static-qt.sparc-en.tar.bz2 6739692
-SHA256 0d4bbf619354de14226ee5cdea0524a86eff4725531d1e0a5fa41a6ab94b2a0d opera-9.22-20070716.1-static-qt.sparc-en.tar.bz2 6739692
-MD5 88611ff69658ed6fe70790393f3ea14b opera-9.22-20070716.4-shared-qt.i386.freebsd-en.tar.bz2 5122833
-RMD160 c8b34d4f9f25a6b67d68e05a16d4d08a7e9a7724 opera-9.22-20070716.4-shared-qt.i386.freebsd-en.tar.bz2 5122833
-SHA256 5b30e178e17f7e609a4eeb64be0d90d221f3858922989f515582719ab4213c24 opera-9.22-20070716.4-shared-qt.i386.freebsd-en.tar.bz2 5122833
-MD5 e125cf9ce197a63f9587279feede27b5 opera-9.22-20070716.6-shared-qt.i386-en.tar.bz2 5229135
-RMD160 a2ac8c984dd34eb803eca30882fc4e580f723748 opera-9.22-20070716.6-shared-qt.i386-en.tar.bz2 5229135
-SHA256 7a6ee406d9385319bc0a4f387d81ecf1b9e80d9cedebd9a2c511c7459500c7e7 opera-9.22-20070716.6-shared-qt.i386-en.tar.bz2 5229135
