@@ -1,6 +1,9 @@
 # ChangeLog for www-client/opera
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/opera/ChangeLog,v 1.114 2007/07/26 13:17:03 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/opera/ChangeLog,v 1.115 2007/07/26 15:49:11 jer Exp $
+
+  26 Jul 2007; Jeroen Roovers <jer@gentoo.org> -opera-9.22-r1.ebuild:
+  Silly me (bug #127200 comment #23 :).
 
 *opera-9.22-r1 (26 Jul 2007)
 
